@@ -1,13 +1,0 @@
-.idea/
-*.iml
-out/
-target/
-dist/
-project/boot/
-project/plugins/project/
-project/plugins/src_managed/
-*.log
-*.tmproj
-lib_managed/
-.ivyjars
-.project
