@@ -1,6 +1,0 @@
-target(name='scrooge-runtime',
-  dependencies=[
-    'scrooge/scrooge-runtime/src/main/scala',
-    'scrooge/scrooge-runtime/src/main/java'
-  ]
-)
