@@ -1,9 +1,0 @@
-java_library(name='java',
-  provides = artifact(
-    org = 'com.twitter',
-    name = 'scrooge-runtime-java',
-    repo = artifactory,
-  ),
-  fatal_warnings=False,
-  sources=rglobs('*.java')
-)
